fix: Add gap between form divs

--- a/style.css
+++ b/style.css
@@ -141,6 +141,8 @@ form {
 
     display: flex;
     flex-direction: column;
+
+    gap: 18px;
     justify-content: space-around;
 }
 
@@ -168,7 +170,7 @@ form > div > div {
     flex: 3.5;
 }
 
-.bottom > button {
+button {
     border: 0;
     border-radius: 8px;
 
